- report query - export to jrxml
git-svn-id: https://dynamicjasper.svn.sourceforge.net/svnroot/dynamicjasper/api/tags/release_2_0_4@310 2bfdcaec-5528-0410-9d21-f7f2b6497bdd